--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 body {
    padding: 0;
    margin: 0;
+   font-family: Arial, Helvetica, sans-serif;
 }
 
 .header {
@@ -10,8 +11,11 @@ body {
 }
 
 #logo {
-   margin-left: 40px;
+   margin-left: 200px;
    padding: 20px;
    color: white;
-   font-family: Arial, Helvetica, sans-serif
+   font-size: 25px;
+   font-weight: 800;
+   font-family: Arial, Helvetica, sans-serif;
+
 }
