--- a/style.css
+++ b/style.css
@@ -4,18 +4,40 @@ body {
    font-family: Arial, Helvetica, sans-serif;
 }
 
-.header {
-   display: flex;
-   background-color: #1f2937;
-
-}
-
 #logo {
-   margin-left: 200px;
+   margin-left: 150px;
    padding: 20px;
    color: white;
    font-size: 25px;
    font-weight: 800;
    font-family: Arial, Helvetica, sans-serif;
 
+}
+
+nav {
+   background-color: #333;
+   height: 120px;
+   display: flex;
+   justify-content: space-between;
+   align-items: center;
+}
+
+
+
+ul {
+   list-style: none;
+   margin-right: 90px;
+   padding: 0;
+   display: flex;
+}
+
+li {
+   margin: 0 20px;
+}
+
+a {
+   font-weight: 650;
+   font-size: 18px;
+   color: darkgray;
+   text-decoration: none;
 }
