--- a/style.css
+++ b/style.css
@@ -4,6 +4,33 @@ body {
    font-family: Arial, Helvetica, sans-serif;
 }
 
+/* ScrollBar Customization */
+
+
+::-webkit-scrollbar {
+   width: 1em;
+}
+
+::-webkit-scrollbar-track {
+   background: #0f1928;
+
+
+
+}
+
+::-webkit-scrollbar-thumb {
+   background: rgb(36, 49, 66)
+}
+
+::-webkit-scrollbar-thumb:hover {
+   background: rgb(56, 74, 96);
+}
+
+.testing {
+   height: 2000px;
+}
+
+
 #logo {
    margin-left: 150px;
    padding: 20px;
@@ -56,12 +83,13 @@ li {
 
    background-color: #1F2937;
    padding: 5px;
+   padding-bottom: 100px;
 }
 
 .info {
    width: 350px;
-   margin-top: 50px;
-   margin-left: 150px;
+   padding: 50px;
+   padding-left: 150px;
 }
 
 #main-title {
@@ -95,7 +123,9 @@ li {
 
 img {
 
-
+   position: absolute;
+   top: 20%;
+   left: 50%;
    width: 550px;
 
 }
