--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
    padding: 0;
    margin: 0;
-   font-family: Arial, Helvetica, sans-serif;
+   font-family: 'Varela Round', sans-serif;
 }
 
 /* ScrollBar Customization */
@@ -26,9 +26,7 @@ body {
    background: rgb(56, 74, 96);
 }
 
-.testing {
-   height: 2000px;
-}
+
 
 
 #logo {
@@ -121,11 +119,43 @@ li {
    font-weight: 600;
 }
 
-img {
+.Main-Section img {
 
    position: absolute;
    top: 20%;
    left: 50%;
    width: 550px;
+
+}
+
+/* END OF MAIN SECTION */
+/* BELOW MAIN SECTION BEGANS (Random Information) */
+
+.Under-MainSect {
+
+   padding: 50px 150px 50px 150px;
+}
+
+#randinfoTitle {
+   display: flex;
+   justify-content: center;
+   font-size: 35px;
+   font-weight: 700;
+   height: 20px;
+   padding-bottom: 3%;
+}
+
+.imgSec {
+   width: 200px;
+   height: 200px;
+   border: solid rgb(53, 127, 238) 5px;
+   border-radius: 10px;
+}
+
+.imgGallery {
+   display: flex;
+   justify-content: space-evenly;
+   flex-direction: row;
+
 
 }
